appId: org.openwaqf.signer
---
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-sign-mode"
    commands:
      - tapOn:
          id: "btn-sign-mode"
- runFlow:
    when:
      visible:
        id: "btn-sample"
    commands:
      - tapOn:
          id: "btn-sample"
- runFlow:
    when:
      visible: "No file? Try with a sample PDF"
    commands:
      - tapOn: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "ليس لديك ملف؟ جرب نموذج PDF"
    commands:
      - tapOn: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Pas de fichier ? Essayez avec un PDF d'exemple"
    commands:
      - tapOn: "Pas de fichier ? Essayez avec un PDF d'exemple"
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-toggle-advanced"
    commands:
      - tapOn:
          id: "btn-toggle-advanced"
- runFlow:
    when:
      visible:
        id: "m-btn-toggle-advanced"
    commands:
      - tapOn:
          id: "m-btn-toggle-advanced"
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-add-text"
    commands:
      - tapOn:
          id: "btn-add-text"
- runFlow:
    when:
      visible:
        id: "m-btn-add-text"
    commands:
      - tapOn:
          id: "m-btn-add-text"
- assertVisible:
    id: "custom-prompt"
- assertVisible:
    id: "input-custom-prompt"
- tapOn:
    id: "btn-cancel-prompt"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-exit"
- tapOn:
    id: "btn-exit"
- waitForAnimationToEnd
