appId: org.openwaqf.signer
---
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-sample"
    commands:
      - tapOn:
          id: "btn-sample"
- runFlow:
    when:
      visible: "No file? Try with a sample PDF"
    commands:
      - tapOn: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "ليس لديك ملف؟ جرب نموذج PDF"
    commands:
      - tapOn: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Pas de fichier ? Essayez avec un PDF d'exemple"
    commands:
      - tapOn: "Pas de fichier ? Essayez avec un PDF d'exemple"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Exit"
    commands:
      - assertVisible: "Exit"
      - tapOn: "Exit"
      - waitForAnimationToEnd
      - assertVisible: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "خروج"
    commands:
      - assertVisible: "خروج"
      - tapOn: "خروج"
      - waitForAnimationToEnd
      - assertVisible: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Quitter"
    commands:
      - assertVisible: "Quitter"
      - tapOn: "Quitter"
      - waitForAnimationToEnd
      - assertVisible: "Pas de fichier ? Essayez avec un PDF d'exemple"
